# shvspym

./: .gitignore  BrokerDelegate.qml  BrokerProperties.qml  BrokersPane.qml  CMakeLists.txt  DeliveredSignalDelegate.qml  Main.qml  MethodDelegate.qml  MethodsRect.qml  NodeDelegate.qml  README.md  SessionPage.qml  ShvPane.qml  Style.qml  SubscriptionDelegate.qml  TextViewPane.qml  shvspym.qrc
.github/workflows/: mdbook.yml  static.yml
android/: AndroidManifest.xml
doc/: book.toml
doc/src/: README.md  SUMMARY.md
qml/: AboutDialog.qml  BrokerDelegate.qml  BrokerListDelegate.qml  BrokerProperties.qml  BrokersPane.qml  DeliveredSignalDelegate.qml  Main.qml  MethodDelegate.qml  MethodsPane.qml  MethodsRect.qml  MyButton.qml  NodeDelegate.qml  NodeListDelegate.qml  NodesPane.qml  NodesRect.qml  SessionPage.qml  ShvPane.qml  SubscriptionDelegate.qml  TextViewPane.qml
src/: application.cpp  application.h  brokerlistmodel.cpp  brokerlistmodel.h  brokerproperty.cpp  brokerproperty.h  main.cpp  preferences.cpp  preferences.h  rpcconnection.cpp  rpcconnection.h  settings.cpp  settings.h  subscriptionmodel.cpp  subscriptionmodel.h  version.h
src/servertreemodel/: servertreemodel.cpp  servertreemodel.h  shvbrokernodeitem.cpp  shvnodeitem.cpp  shvnodeitem.h
